--- a/intaglio-v3/HTML/events/adsense.html
+++ b/intaglio-v3/HTML/events/adsense.html
@@ -59,7 +59,7 @@
                         <!-- Logo -->
                         <div class="logo">
                             <a class="event-name" href="#body">
-                                ADSENSE
+                              <img class="logo-img logo-img-main logo-event" src="../img/logo_white.png" alt="IIMC Logo" href = '#'>
                             </a>
                         </div>
                         <!-- End Logo -->
@@ -68,6 +68,7 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse nav-collapse">
                         <div class="menu-container">
+                            <div class='event-title'>ADSENSE</div>
                             <div id = 'regBtn' class='pull-right'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODY1/ADSENSE'>Register/Sign In</a></div>
                         </div>
                     </div>
@@ -83,6 +84,7 @@
           <!-- Indicators -->
           <div class="container event-details">
             <div class="clearfix">
+              <h2 class='bold event-title-small small-screen'> ADSENSE </h2>
               <h3>“Doing business without advertising is like winking at the dark. You know what you are doing, but nobody else does” – Stuart Britt</h3>
               <p>Advertising plays a very critical role in the business world by enabling sellers to effectively compete with one another for the attention of buyers. Advertising is the best way to communicate to the customers. Advertising helps informs the customers about the brands available in the market and the variety of products useful to them. Adsense will test the candidates skill in how well they can advertise a product or a brand by applying the right on-ground execution strategies & marketing concepts.</p>
               <div id = 'regBtn' class='pull-right small-screen'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODY1/ADSENSE'>Register/Sign In</a></div>
@@ -113,10 +115,32 @@
               <div class="col-md-6">
                 <div class="clearfix poc">
                   <h4> Point of Contact </h4>
-                  <ul>
-                    <li>Priyanshu Chouksey - +91-7044151076 (priyanshuc2018@email.iimcal.ac.in)</li>
-                    <li>Shivangi Arya- +91-7983433875 (shivangia2018@email.iimcal.ac.in)</li>
-                  </ul>
+                  <div>
+                    <div class='row'>
+                      <div class='col-md-4 bold'>
+                        Priyanshu Chouksey
+                      </div>
+                      <div class='col-md-4'>
+                        <i class="fa fa-phone"></i> +91-7044151076
+                      </div>
+                      <div class='col-md-4 flex'>
+                        <div><i class="fa fa-envelope"></i></div>
+                        <div class='margin-l-3'> priyanshuc2018@email.iimcal.ac.in</div>
+                      </div>
+                    </div>
+                    <div class = 'row margin-t-2'>
+                      <div class='col-md-4 bold'>
+                        Shivangi Arya
+                      </div>
+                      <div class='col-md-4'>
+                        <i class="fa fa-phone"></i> +91-7983433875
+                      </div>
+                      <div class='col-md-4 flex'>
+                        <div><i class="fa fa-envelope"></i></div>
+                        <div class='margin-l-3'>shivangia2018@email.iimcal.ac.in</div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
                 <div class="clearfix rules">
                   <h4> Rules </h4>
@@ -129,7 +153,7 @@
                   </ul>
                 </div>
                 <div>
-                  <i class="fa fa-inr fa-2x" aria-hidden="true" style='margin-left:30px;margin-top: 20px;'></i><span class='prize'>&nbsp;&nbsp;&nbsp;35K Cash Prize</span>
+                  <i class="fa fa-inr fa-2x" aria-hidden="true" style='margin-left:30px;margin-top: 20px;'></i><span class='prize'>&nbsp;&nbsp;&nbsp;Prize Amount 35,000</span>
                 </div>
               </div>
             </div>
